--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,239 +1,221 @@
 version: '3.8'
 
+# For YP-ers we can make it easer by setting SIAB_USE_PPK=true and all PASSWORD_ACCESS=false
+# the default public private keys will then be used
+
 
 services:
   shellinabox:
     image: ivonet/shellinabox:latest
     environment:
-      - SIAB_SUDO=true
       - SIAB_ADDUSER=true
       - SIAB_USER=ivonet
-      - SIAB_USERID=1000
       - SIAB_GROUP=ivonet
-      - SIAB_GROUPID=1000
       - SIAB_PASSWORD=secret
-      - SIAB_SHELL=/bin/bash
-      - SIAB_HOME=/home/ivonet
-      - SIAB_SUDO=false
-    #  - SIAB_PORT=4200
-    #  - SIAB_SERVICE=/:LOGIN
-    #  - SIAB_PKGS=none
-    #  - SIAB_SCRIPT=none
+      - SIAB_SUDO=false # Enable sudo for the steppingstone?
+      - SIAB_USE_PPK=false #Use Pre-generated Public Private keys?
+      - SIAB_SSL=false
     ports:
       - 8080:4200
     networks:
       - frontend
       - backend
 
-  terminal1:
-    image: ivonet/terminal:latest
+  host1:
+    image: ivonet/openssh:latest
     build: .
     environment:
       - PUID=1000
       - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
       - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
+      - PASSWORD_ACCESS=true # if set to false the default keys will be used
       - USER_NAME=ivonet #optional
       - USER_PASSWORD=secret #optional
     networks:
       - backend
     restart: unless-stopped
 
-  terminal2:
-    image: ivonet/terminal:latest
+  host2:
+    image: ivonet/openssh:latest
     build: .
     environment:
       - PUID=1000
       - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
       - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
+      - PASSWORD_ACCESS=true
       - USER_NAME=ivonet #optional
       - USER_PASSWORD=secret #optional
     networks:
       - backend
     restart: unless-stopped
 
-  terminal4:
-    image: ivonet/terminal:latest
+  host4:
+    image: ivonet/openssh:latest
     build: .
     environment:
       - PUID=1000
       - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
       - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
+      - PASSWORD_ACCESS=true
       - USER_NAME=ivonet #optional
       - USER_PASSWORD=secret #optional
     networks:
       - backend
     restart: unless-stopped
 
-  terminal5:
-    image: ivonet/terminal:latest
+  host5:
+    image: ivonet/openssh:latest
     build: .
     environment:
       - PUID=1000
       - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
       - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
+      - PASSWORD_ACCESS=true
       - USER_NAME=ivonet #optional
       - USER_PASSWORD=secret #optional
     networks:
       - backend
     restart: unless-stopped
 
-  terminal6:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal7:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal8:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal9:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal10:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal11:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal12:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal13:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal14:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
-
-  terminal15:
-    image: ivonet/terminal:latest
-    build: .
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - PUBLIC_KEY_FILE=/opt/ssh/id_rsa.pub #optional
-      - SUDO_ACCESS=true #optional
-      - PASSWORD_ACCESS=false #optional
-      - USER_NAME=ivonet #optional
-      - USER_PASSWORD=secret #optional
-    networks:
-      - backend
-    restart: unless-stopped
+#  host6:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host7:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host8:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host9:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host10:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host11:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host12:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host13:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host14:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
+#
+#  host15:
+#    image: ivonet/openssh:latest
+#    build: .
+#    environment:
+#      - PUID=1000
+#      - PGID=1000
+#      - SUDO_ACCESS=true #optional
+#      - PASSWORD_ACCESS=true
+#      - USER_NAME=ivonet #optional
+#      - USER_PASSWORD=secret #optional
+#    networks:
+#      - backend
+#    restart: unless-stopped
 
 
 networks:
