--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - USER_NAME=ivonet
       - PASSWORD=secret
       - SUDO_ACCESS=true
+    hostname: steppingstone
     ports:
       - 8080:4200
     networks:
@@ -23,195 +24,16 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - SUDO_ACCESS=false #optional
+      - SUDO_ACCESS=true #optional
       - PASSWORD_ACCESS=true # if set to false the default keys will be used
       - USER_NAME=ivonet #optional
       - USER_PASSWORD=secret #optional
+    hostname: host1
     networks:
       - backend
     restart: unless-stopped
 
-#  host2:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host4:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host5:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
 
-#  host6:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host7:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host8:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host9:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host10:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host11:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host12:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host13:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host14:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
-#
-#  host15:
-#    image: ivonet/openssh:latest
-#    build: .
-#    environment:
-#      - PUID=1000
-#      - PGID=1000
-#      - SUDO_ACCESS=true #optional
-#      - PASSWORD_ACCESS=true
-#      - USER_NAME=ivonet #optional
-#      - USER_PASSWORD=secret #optional
-#    networks:
-#      - backend
-#    restart: unless-stopped
 
 
 networks:
